Fixed overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -87,7 +87,6 @@ em {
     width: 100%;
     height: 100vh;
     position: relative;
-    overflow: hidden;
     padding-bottom: 110px;
   }
 }
